优化用户认证流程，添加VIP状态支持，重构登录和会话检查逻辑，更新相关API接口